src/test/ui/traits/trait-bounds-same-crate-name.stderr
error[E0277]: the trait bound `main::a::Foo: main::a::Bar` is not satisfied
  --> $DIR/trait-bounds-same-crate-name.rs:31:20
   |
LL |         a::try_foo(foo);
   |                    ^^^ the trait `main::a::Bar` is not implemented for `main::a::Foo`
   | 
  ::: $DIR/auxiliary/crate_a1.rs:3:24
   |
LL | pub fn try_foo(x: impl Bar) {}
   |                        --- required by this bound in `main::a::try_foo`
   |
help: trait impl with same name found
  --> $DIR/auxiliary/crate_a2.rs:5:1
   |
LL | impl Bar for Foo {}
   | ^^^^^^^^^^^^^^^^^^^
   = note: Perhaps two different versions of crate `crate_a2` are being used?

error[E0277]: the trait bound `main::a::DoesNotImplementTrait: main::a::Bar` is not satisfied
  --> $DIR/trait-bounds-same-crate-name.rs:38:20
   |
LL |         a::try_foo(implements_no_traits);
   |                    ^^^^^^^^^^^^^^^^^^^^ the trait `main::a::Bar` is not implemented for `main::a::DoesNotImplementTrait`
   | 
  ::: $DIR/auxiliary/crate_a1.rs:3:24
   |
LL | pub fn try_foo(x: impl Bar) {}
   |                        --- required by this bound in `main::a::try_foo`

error[E0277]: the trait bound `main::a::ImplementsWrongTraitConditionally<isize>: main::a::Bar` is not satisfied
  --> $DIR/trait-bounds-same-crate-name.rs:45:20
   |
LL |         a::try_foo(other_variant_implements_mismatched_trait);
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `main::a::Bar` is not implemented for `main::a::ImplementsWrongTraitConditionally<isize>`
   | 
  ::: $DIR/auxiliary/crate_a1.rs:3:24
   |
LL | pub fn try_foo(x: impl Bar) {}
   |                        --- required by this bound in `main::a::try_foo`
   |
help: trait impl with same name found
  --> $DIR/auxiliary/crate_a2.rs:13:1
   |
LL | impl Bar for ImplementsWrongTraitConditionally<isize> {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: Perhaps two different versions of crate `crate_a2` are being used?

error[E0277]: the trait bound `main::a::ImplementsTraitForUsize<isize>: main::a::Bar` is not satisfied
  --> $DIR/trait-bounds-same-crate-name.rs:51:20
   |
LL |         a::try_foo(other_variant_implements_correct_trait);
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `main::a::Bar` is not implemented for `main::a::ImplementsTraitForUsize<isize>`
   | 
  ::: $DIR/auxiliary/crate_a1.rs:3:24
   |
LL | pub fn try_foo(x: impl Bar) {}
   |                        --- required by this bound in `main::a::try_foo`
   |
   = help: the following implementations were found:
             <main::a::ImplementsTraitForUsize<usize> as main::a::Bar>

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
